src/test/ui/error-codes/E0232.stderr
error[E0232]: `#[rustc_on_unimplemented]` requires a value
  --> $DIR/E0232.rs:3:1
   |
LL | #[rustc_on_unimplemented]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ value required here
   |
   = note: eg `#[rustc_on_unimplemented(message="foo")]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0232`.
